<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/smartschatters"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/usernameInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTitleTextView" />

    <TextView
        android:id="@+id/usernameInfo"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameInputField"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/profileTitleTextView" />

    <TextView
        android:fontFamily="sans-serif-black"
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/first_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputField"
        android:layout_marginStart="70dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/firstnameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/firstname"
        app:layout_constraintTop_toBottomOf="@+id/usernameInfo"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/last_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        android:layout_marginStart="70dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/lastnameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/lastname"
        app:layout_constraintTop_toBottomOf="@+id/firstnameInfo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>